--- a/public/css/style.css
+++ b/public/css/style.css
@@ -26,6 +26,7 @@
     /*========== Z Index ==========*/
     --z-tooltip: 10;
     --z-fixed: 100;
+    --z-background: -1;
 }
 
 /*========================== BASE ======================*/
@@ -80,17 +81,8 @@ textarea {
 
 .container {
     max-width: 954px;
-    margin-inline: 1.5rem;
+    margin-inline: .7rem;
     /* margin-inline: 15.188rem; */
-}
-
-.grid {
-    display: grid;
-    gap: 1.5rem;
-}
-
-.section {
-    padding-block: 5rem 1rem;
 }
 
 .main {
@@ -110,16 +102,21 @@ textarea {
     z-index: var(--z-fixed);
 }
 
-.background__header {
-    position: absolute;
-}
-
 .nav {
     position: relative;
     height: var(--header-height);
     display: flex;
     justify-content: space-between;
     align-items: center;
+}
+
+.nav__logo,
+.nav__close,
+.nav__toggle,
+.nav__actions {
+    display: flex;
+    color: var(--text-color);
+    cursor: pointer;
 }
 
 .nav__logo {
@@ -136,10 +133,6 @@ textarea {
     color: var(--yellow-color);
 }
 
-.nav__menu {
-    display: flex;
-}
-
 .nav__menu a {
     color: var(--text-color);
     text-decoration: none;
@@ -150,15 +143,53 @@ textarea {
     color: var(--yellow-color);
 }
 
-#wrapper {
-    padding-top: 100px;
+/* Navigation for mobile devices */
+@media screen and (max-width: 992px) {
+    .nav__menu {
+        position: fixed;
+        top: 0;
+        right: -100%;
+        background-image: var(--gradient-right);
+        backdrop-filter: blur(16px);
+        -webkit-backdrop-filter: blur(16px);
+        width: 80%;
+        height: 100%;
+        padding: 6rem 3rem 0;
+        transition: right .4s;
+    }
 }
 
+.nav__list {
+    display: flex;
+    flex-direction: column;
+    row-gap: 3rem;
+}
+
+.nav__close {
+    position: absolute;
+    top: 1.15rem;
+    right: 1.5rem;
+    font-size: 1.25rem;
+}
+
+/* Show menu */
+.show-menu {
+    right: 0;
+}
 
 /*========================== MAIN ======================*/
 
+.main__background {
+    position: absolute;
+    background-image: var(--background-gradient);
+    width: 100%;
+    height: 500px;
+    z-index: var(--z-background);
+}
+
 .main__home {
     text-align: center;
+    /* background-image: var(--background-gradient); */
 }
 
 .main__title {
