--- a/public/css/style.css
+++ b/public/css/style.css
@@ -206,16 +206,163 @@ textarea {
 
 
 
-
-
 .title-background__main {
     background-image: var(--gradient-bottom);
+}
+
+/* Carousel */
+
+.carousel {
+
+    overflow: hidden;
+    position: relative;
+    width: 100%;
+    perspective: 500px;
+    transform-style: preserve-3d;
+    transform-origin: 0% 50%;
+
+
+    /* Carousel Slider */
+
+    &.carousel-slider {
+
+        top: 0;
+        left: 0;
+
+        .carousel-fixed-item {
+
+            &.with-indicators {
+                bottom: 68px;
+            }
+
+            position: absolute;
+            left: 0;
+            right: 0;
+            bottom: 20px;
+            z-index: 1;
+
+        }
+
+        .carousel-item {
+
+            width: 100%;
+            height: 100%;
+            position: absolute;
+            top: 0;
+            left: 0;
+
+            h2 {
+                font-size: 24px;
+                font-weight: 500;
+                line-height: 32px;
+            }
+
+            p {
+                font-size: 15px;
+            }
+
+        }
+
+    }
+
+    /* Carousel Items */
+
+    .carousel-item {
+
+        visibility: hidden;
+        position: absolute;
+        top: 0;
+        left: 0;
+
+        &>img {
+            width: 100%;
+        }
+
+    }
+
+    /* Indicators */
+
+    .indicators {
+
+        padding-left: 0;
+        color: red;
+        list-style-type: none;
+
+        position: absolute;
+        text-align: center;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        margin: 0;
+
+        .indicator-item {
+
+            &.active {
+                background-color: var(--yellow-color)
+            }
+
+            display: inline-block;
+            position: relative;
+            cursor: pointer;
+            height: 8px;
+            width: 8px;
+            margin: 24px 4px;
+            background-color: var(--brown-color);
+
+            transition: background-color .3s;
+            border-radius: 50%;
+
+        }
+
+    }
+
+    /* Materialbox compatibility */
+
+    &.scrolling .carousel-item .materialboxed,
+    .carousel-item:not(.active) .materialboxed {
+        pointer-events: none;
+    }
+
+}
+
+.carousel-box {
+    position: relative;
+    min-width: 950px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: rgba(0, 0, 0, 0.2);
+    box-shadow: 20px 20px 50px rgba(0, 0, 0, 0.5);
+    border: 1px solid rgba(255, 255, 255, 0.1);
+    backdrop-filter: blur(20px);
+    border-radius: 10px;
+}
+
+.carousel {
+    position: relative;
+    display: flex;
+    height: 550px;
+    perspective: 1500;
+}
+
+.carousel .carousel-item {
+    width: 250px;
+    cursor: pointer;
+}
+
+.carousel .carousel-item img {
+    max-width: 235px;
+    border-radius: 10px;
+    transform: translateX(8px) translateY(-100px);
+    object-fit: cover;
+    object-position: center;
 }
 
 .actors__container {
     display: grid;
     grid-template-columns: repeat(3, 240px);
 }
+
 
 
 
