--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,407 +1,427 @@
 /*========================== VARIABLES CSS ======================*/
 :root {
-    --header-height: 3.5rem;
-    /*========== Colors ==========*/
-    --background-color: #000000;
-    --brown-color: #471D07;
-    --orange-color: #A2520D;
-    --yellow-color: #D9A849;
-    --text-color: #FFFFFF;
-    --gradient-top: linear-gradient(90deg, #D9A849 0%, #A2520D 100%);
-    --gradient-left: linear-gradient(90deg, rgba(162, 82, 13, 0.5) 0%, rgba(0, 0, 0, 0.5) 100%);
-    --gradient-right: linear-gradient(90deg, rgba(0, 0, 0, 0.5) 0%, rgba(162, 82, 13, 0.5) 100%);
-    --gradient-bottom: linear-gradient(359.4deg, rgba(162, 82, 13, 0.5) 0.52%, rgba(0, 0, 0, 0.5) 99.48%);
-    --button-gradient: linear-gradient(90deg, #D9A849 1.11%, #A2520D 98.89%);
-    --hypertext-underline-gradient: linear-gradient(0deg, #D9A849 0%, #A2520D 100%);
-    --background-gradient: radial-gradient(131.8% 131.8% at 50% -31.8%, #D9A849 23%, #471D07 72.5%, #000000 100%);
-    --swiper-pagination-color: var(--yellow-color);
+  --header-height: 3.5rem;
+  /*========== Colors ==========*/
+  --background-color: #000000;
+  --brown-color: #471d07;
+  --orange-color: #a2520d;
+  --yellow-color: #d9a849;
+  --text-color: #ffffff;
+  --gradient-top: linear-gradient(90deg, #d9a849 0%, #a2520d 100%);
+  --gradient-left: linear-gradient(
+    90deg,
+    rgba(162, 82, 13, 0.5) 0%,
+    rgba(0, 0, 0, 0.5) 100%
+  );
+  --gradient-right: linear-gradient(
+    90deg,
+    rgba(0, 0, 0, 0.5) 0%,
+    rgba(162, 82, 13, 0.5) 100%
+  );
+  --gradient-bottom: linear-gradient(
+    359.4deg,
+    rgba(162, 82, 13, 0.5) 0.52%,
+    rgba(0, 0, 0, 0.5) 99.48%
+  );
+  --button-gradient: linear-gradient(90deg, #d9a849 1.11%, #a2520d 98.89%);
+  --hypertext-underline-gradient: linear-gradient(
+    0deg,
+    #d9a849 0%,
+    #a2520d 100%
+  );
+  --background-gradient: radial-gradient(
+    131.8% 131.8% at 50% -31.8%,
+    #d9a849 23%,
+    #471d07 72.5%,
+    #000000 100%
+  );
+  --swiper-pagination-color: var(--yellow-color);
 
-    /*========== Fonts & typography ==========*/
-    /*.5rem = 8px | 1rem = 16px ...*/
-    --title-font: "Dune Rise";
-    --h2-font: "Dune Rise";
-    --nav-text-font: "Champagne & Limousines";
-    /* --h1-font-size: 1.5rem;
+  /*========== Fonts & typography ==========*/
+  /*.5rem = 8px | 1rem = 16px ...*/
+  --title-font: "Dune Rise";
+  --h2-font: "Dune Rise";
+  --nav-text-font: "Champagne & Limousines";
+  --step--2: clamp(1.3021rem, 0.273rem + 4.5735cqi, 3rem);
+  /* --h1-font-size: 1.5rem;
     --h2-font-size: 1.5rem; */
-    /*========== Z Index ==========*/
-    --z-tooltip: 10;
-    --z-fixed: 100;
-    --z-background: -1;
+  /*========== Z Index ==========*/
+  --z-tooltip: 10;
+  --z-fixed: 100;
+  --z-background: -1;
 }
 
 /*========================== BASE ======================*/
 
 * {
-    box-sizing: border-box;
-    padding: 0;
-    margin: 0;
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
 }
 
 html {
-    scroll-behavior: smooth;
-    color: var(--text-color);
+  scroll-behavior: smooth;
+  color: var(--text-color);
 }
 
 body {
-    background-color: var(--background-color);
+  background-color: var(--background-color);
 }
 
 @font-face {
-    font-family: "Champagne & Limousines";
-    src: url("../fonts/Champagne_&_Limousines.ttf") format("truetype");
-    font-family: "Dune Rise";
-    src: url("../fonts/Dune_Rise.ttf") format("truetype");
-    font-weight: normal;
-    font-style: normal;
+  font-family: "Champagne & Limousines";
+  src: url("../fonts/Champagne_&_Limousines.ttf") format("truetype");
+  font-family: "Dune Rise";
+  src: url("../fonts/Dune_Rise.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
 }
 
 h2 {
-    font-family: var(--h2-font);
-    font-size: 1.5rem;
-    padding-left: 1rem;
-    padding-bottom: .5rem;
+  font-family: var(--h2-font);
+  font-size: 1.5rem;
+  padding-left: 1rem;
+  padding-bottom: 0.5rem;
 }
 
 hr {
-    height: 2px;
-    background: var(--gradient-top);
-    border: none;
+  height: 2px;
+  background: var(--gradient-top);
+  border: none;
 }
 
 ul {
-    list-style: none;
-    font-family: var(--nav-text-font);
+  list-style: none;
+  font-family: var(--nav-text-font);
 }
 
 textarea {
-    resize: none;
+  resize: none;
 }
 
 /*========================== REUSABLE CSS CLASSES ======================*/
 
 .container {
-    max-width: 954px;
-    margin-inline: .7rem;
-    /* margin-inline: 15.188rem; */
+  max-width: 954px;
+  margin-inline: 0.7rem;
+  /* margin-inline: 15.188rem; */
 }
 
 .main {
-    overflow: hidden;
+  overflow: hidden;
+}
+
+.main__separator {
+  margin: 100px 0px;
 }
 
 /*========================== HEADER & NAV ======================*/
 .header {
-    position: fixed;
-    width: 100%;
-    top: 0;
-    left: 0;
-    background-color: var(--brown-color);
-    /* background: url(../img/header.svg) repeat-x; */
-    /* background-position-y: -100px; */
-    /* border-color: transparent; */
-    z-index: var(--z-fixed);
+  position: fixed;
+  width: 100%;
+  top: 0;
+  left: 0;
+  /* background-color: var(--brown-color); */
+  background: url(../img/header.svg) repeat-x;
+  /* background-position-y: -100px; */
+  /* border-color: transparent; */
+  z-index: var(--z-fixed);
 }
 
 .nav {
-    position: relative;
-    height: var(--header-height);
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+  position: relative;
+  height: var(--header-height);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .nav__logo,
 .nav__close,
 .nav__toggle,
 .nav__actions {
-    display: flex;
-    color: var(--text-color);
-    cursor: pointer;
+  display: flex;
+  color: var(--text-color);
+  cursor: pointer;
 }
 
 .nav__logo {
-    color: var(--text-color);
-    display: flex;
-    align-items: center;
-    gap: 1rem;
-    font-family: var(--title-font);
-    text-decoration: none;
-    transition: .5s;
+  color: var(--text-color);
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+  font-family: var(--title-font);
+  text-decoration: none;
+  transition: 0.5s;
 }
 
 .nav__logo:hover {
-    color: var(--yellow-color);
+  color: var(--yellow-color);
 }
 
 .nav__menu a {
-    color: var(--text-color);
-    text-decoration: none;
-    transition: .5s;
+  color: var(--text-color);
+  text-decoration: none;
+  transition: 0.5s;
 }
 
 .nav__menu a:hover {
-    color: var(--yellow-color);
+  color: var(--yellow-color);
 }
 
 /* Navigation for mobile devices */
 @media screen and (max-width: 992px) {
-    .nav__menu {
-        position: fixed;
-        top: 0;
-        right: -100%;
-        background-image: var(--gradient-right);
-        backdrop-filter: blur(16px);
-        -webkit-backdrop-filter: blur(16px);
-        width: 80%;
-        height: 100%;
-        padding: 6rem 3rem 0;
-        transition: right .4s;
-    }
+  .nav__menu {
+    position: fixed;
+    top: 0;
+    right: -100%;
+    background-image: var(--gradient-right);
+    backdrop-filter: blur(16px);
+    -webkit-backdrop-filter: blur(16px);
+    width: 80%;
+    height: 100%;
+    padding: 6rem 3rem 0;
+    transition: right 0.4s;
+  }
 }
 
 .nav__list {
-    display: flex;
-    flex-direction: column;
-    row-gap: 3rem;
+  display: flex;
+  flex-direction: column;
+  row-gap: 3rem;
 }
 
 .nav__close {
-    position: absolute;
-    top: 1.15rem;
-    right: 1.5rem;
-    font-size: 1.25rem;
+  position: absolute;
+  top: 1.15rem;
+  right: 1.5rem;
+  font-size: 1.25rem;
 }
 
 /* Show menu */
 .show-menu {
-    right: 0;
+  right: 0;
 }
 
 /*========================== MAIN ======================*/
 
 .main__background {
-    position: absolute;
-    background-image: var(--background-gradient);
-    width: 100%;
-    height: 500px;
-    z-index: var(--z-background);
+  position: absolute;
+  background-image: var(--background-gradient);
+  width: 100%;
+  height: 500px;
+  z-index: var(--z-background);
+}
+
+.main__container {
+    margin-bottom: 2rem;
 }
 
 .main__home {
-    text-align: center;
-    /* background-image: var(--background-gradient); */
-}
-
-.main__title {
-    position: absolute;
-    font-family: var(--h2-font);
-    top: 50%;
-    left: 50%;
+  position: relative;
+  text-align: center;
 }
 
 .main__gif {
-    position: relative;
-    width: 50vw;
+  width: 100%;
 }
 
-
+.main__title {
+  position: absolute;
+  font-family: var(--h2-font);
+  font-size: var(--step--2);
+  color: var(--text-color);
+  letter-spacing: var(--step--2);
+  width: 1440px;
+  left: calc(50% - 1440px / 2);
+  bottom: 46%;
+  text-shadow: -1px -1px 0 var(--brown-color), 0 -1px 0 var(--brown-color),1px -1px 0 var(--brown-color), 1px 0 0 var(--brown-color),1px 1px 0 var(--brown-color), 0 1px 0 var(--brown-color),-1px 1px 0 var(--brown-color), -1px 0 0 var(--brown-color);
+}
 
 .title-background__main {
-    background-image: var(--gradient-bottom);
+  background-image: var(--gradient-bottom);
+}
+
+.main__description {
+    text-align: center;
+    font-family: var(--nav-text-font);
 }
 
 /* Carousel */
 
+.carousel__container {
+  padding-bottom: 50px;
+}
+
 .carousel {
+  overflow: hidden;
+  position: relative;
+  width: 100%;
+  perspective: 500px;
+  transform-style: preserve-3d;
+  transform-origin: 0% 50%;
 
-    overflow: hidden;
-    position: relative;
-    width: 100%;
-    perspective: 500px;
-    transform-style: preserve-3d;
-    transform-origin: 0% 50%;
+  /* Carousel Slider */
 
+  &.carousel-slider {
+    top: 0;
+    left: 0;
 
-    /* Carousel Slider */
+    .carousel-fixed-item {
+      &.with-indicators {
+        bottom: 68px;
+      }
 
-    &.carousel-slider {
-
-        top: 0;
-        left: 0;
-
-        .carousel-fixed-item {
-
-            &.with-indicators {
-                bottom: 68px;
-            }
-
-            position: absolute;
-            left: 0;
-            right: 0;
-            bottom: 20px;
-            z-index: 1;
-
-        }
-
-        .carousel-item {
-
-            width: 100%;
-            height: 100%;
-            position: absolute;
-            top: 0;
-            left: 0;
-
-            h2 {
-                font-size: 24px;
-                font-weight: 500;
-                line-height: 32px;
-            }
-
-            p {
-                font-size: 15px;
-            }
-
-        }
-
+      position: absolute;
+      left: 0;
+      right: 0;
+      bottom: 20px;
+      z-index: 1;
     }
-
-    /* Carousel Items */
 
     .carousel-item {
+      width: 100%;
+      height: 100%;
+      position: absolute;
+      top: 0;
+      left: 0;
 
-        visibility: hidden;
-        position: absolute;
-        top: 0;
-        left: 0;
+      h2 {
+        font-size: 24px;
+        font-weight: 500;
+        line-height: 32px;
+      }
 
-        &>img {
-            width: 100%;
-        }
-
+      p {
+        font-size: 15px;
+      }
     }
+  }
 
-    /* Indicators */
+  /* Carousel Items */
 
-    .indicators {
+  .carousel-item {
+    visibility: hidden;
+    position: absolute;
+    top: 0;
+    left: 0;
 
-        padding-left: 0;
-        color: red;
-        list-style-type: none;
-
-        position: absolute;
-        text-align: center;
-        left: 0;
-        right: 0;
-        bottom: 0;
-        margin: 0;
-
-        .indicator-item {
-
-            &.active {
-                background-color: var(--yellow-color)
-            }
-
-            display: inline-block;
-            position: relative;
-            cursor: pointer;
-            height: 8px;
-            width: 8px;
-            margin: 24px 4px;
-            background-color: var(--brown-color);
-
-            transition: background-color .3s;
-            border-radius: 50%;
-
-        }
-
+    & > img {
+      width: 100%;
     }
+  }
 
-    /* Materialbox compatibility */
+  /* Indicators */
 
-    &.scrolling .carousel-item .materialboxed,
-    .carousel-item:not(.active) .materialboxed {
-        pointer-events: none;
+  .indicators {
+    padding-left: 0;
+    color: red;
+    list-style-type: none;
+
+    position: absolute;
+    text-align: center;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    margin: 0;
+
+    .indicator-item {
+      &.active {
+        background-color: var(--yellow-color);
+      }
+
+      display: inline-block;
+      position: relative;
+      cursor: pointer;
+      height: 8px;
+      width: 8px;
+      margin: 24px 4px;
+      background-color: var(--text-color);
+
+      transition: background-color 0.3s;
+      border-radius: 50%;
     }
+  }
 
+  /* Materialbox compatibility */
+
+  &.scrolling .carousel-item .materialboxed,
+  .carousel-item:not(.active) .materialboxed {
+    pointer-events: none;
+  }
 }
 
 .carousel-box {
-    position: relative;
-    min-width: 950px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background: rgba(0, 0, 0, 0.2);
-    box-shadow: 20px 20px 50px rgba(0, 0, 0, 0.5);
-    border: 1px solid rgba(255, 255, 255, 0.1);
-    backdrop-filter: blur(20px);
-    border-radius: 10px;
+  position: relative;
+  min-width: 950px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: rgba(0, 0, 0, 0.2);
+  backdrop-filter: blur(20px);
+  border-radius: 10px;
 }
 
 .carousel {
-    position: relative;
-    display: flex;
-    height: 550px;
-    perspective: 1500;
+  position: relative;
+  display: flex;
+  height: 550px;
+  perspective: 1500;
 }
 
 .carousel .carousel-item {
-    width: 250px;
-    cursor: pointer;
+  width: 250px;
+  cursor: pointer;
 }
 
 .carousel .carousel-item img {
-    max-width: 235px;
-    border-radius: 10px;
-    transform: translateX(8px) translateY(-100px);
-    object-fit: cover;
-    object-position: center;
+  max-width: 235px;
+  border-radius: 10px;
+  transform: translateX(8px) translateY(-100px);
+  object-fit: cover;
+  object-position: center;
 }
 
-.actors__container {
-    display: grid;
-    grid-template-columns: repeat(3, 240px);
+.carousel__background {
+  position: absolute;
+  z-index: var(--z-background);
+  top: 85%;
 }
 
+.actors__content {
+  display: flex;
+  flex-direction: row;
+}
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+.actor__card {
+  width: 45%;
+  height: 100%;
+}
 
 /* For small devices*/
-@media screen and (min-width: 576px) {}
+@media screen and (min-width: 576px) {
+}
 
 /* For medium devices*/
-@media screen and (min-width: 768px) {}
+@media screen and (min-width: 768px) {
+}
 
 /* For large devices*/
 @media screen and (min-width: 992px) {
-    .nav__list {
-        display: flex;
-        flex-direction: row;
-        gap: 5rem;
-        align-items: center;
-        justify-content: center;
-        justify-items: center;
-    }
+  .nav__list {
+    display: flex;
+    flex-direction: row;
+    gap: 5rem;
+    align-items: center;
+    justify-content: center;
+    justify-items: center;
+  }
 }
 
-
 /* For extra large devices */
-@media screen and (min-width: 1200px) {}
+@media screen and (min-width: 1200px) {
+}
 
 /* For extra extra large devices */
-@media screen and (min-width: 1400px) {}
+@media screen and (min-width: 1400px) {
+}
