--- a/public/css/style.css
+++ b/public/css/style.css
@@ -43,6 +43,7 @@
   --h2-font: "Dune Rise";
   --nav-text-font: "Champagne & Limousines";
   --step--2: clamp(1.3021rem, 0.273rem + 4.5735cqi, 3rem);
+  --step--1: clamp(0.8681rem, 0.2922rem + 2.8793cqi, 2rem);
   /* --h1-font-size: 1.5rem;
     --h2-font-size: 1.5rem; */
   /*========== Z Index ==========*/
@@ -111,8 +112,22 @@ textarea {
   overflow: hidden;
 }
 
-.main__separator {
+.main__separator hr {
   margin: 100px 0px;
+  max-width: 466px;
+  border-radius: 50%;
+  background: var(--yellow-color);
+}
+
+.main__buttons {
+    padding: 10px 50px;
+    font-family: var(--nav-text-font);
+    color: var(--text-color);
+    font-size: 20px;
+    text-decoration: none;
+    border-width: 3px;
+    border: 10px solid var(--yellow-color);
+    background: none;
 }
 
 /*========================== HEADER & NAV ======================*/
@@ -155,6 +170,10 @@ textarea {
   transition: 0.5s;
 }
 
+.nav__span {
+  color: var(--yellow-color);
+}
+
 .nav__logo:hover {
   color: var(--yellow-color);
 }
@@ -170,6 +189,7 @@ textarea {
 }
 
 /* Navigation for mobile devices */
+
 @media screen and (max-width: 992px) {
   .nav__menu {
     position: fixed;
@@ -199,6 +219,7 @@ textarea {
 }
 
 /* Show menu */
+
 .show-menu {
   right: 0;
 }
@@ -214,7 +235,7 @@ textarea {
 }
 
 .main__container {
-    margin-bottom: 2rem;
+  margin-bottom: 2rem;
 }
 
 .main__home {
@@ -235,7 +256,10 @@ textarea {
   width: 1440px;
   left: calc(50% - 1440px / 2);
   bottom: 46%;
-  text-shadow: -1px -1px 0 var(--brown-color), 0 -1px 0 var(--brown-color),1px -1px 0 var(--brown-color), 1px 0 0 var(--brown-color),1px 1px 0 var(--brown-color), 0 1px 0 var(--brown-color),-1px 1px 0 var(--brown-color), -1px 0 0 var(--brown-color);
+  text-shadow: -1px -1px 0 var(--brown-color), 0 -1px 0 var(--brown-color),
+    1px -1px 0 var(--brown-color), 1px 0 0 var(--brown-color),
+    1px 1px 0 var(--brown-color), 0 1px 0 var(--brown-color),
+    -1px 1px 0 var(--brown-color), -1px 0 0 var(--brown-color);
 }
 
 .title-background__main {
@@ -243,8 +267,12 @@ textarea {
 }
 
 .main__description {
-    text-align: center;
-    font-family: var(--nav-text-font);
+  text-align: center;
+  font-family: var(--nav-text-font);
+}
+
+.main__span {
+  color: var(--yellow-color);
 }
 
 /* Carousel */
@@ -253,129 +281,108 @@ textarea {
   padding-bottom: 50px;
 }
 
-.carousel {
-  overflow: hidden;
+.carousel-box {
   position: relative;
-  width: 100%;
+  min-width: 954px;
+  padding-top: 50px;
+  display: flex;
+  /* justify-content: center; */
+  align-items: center;
+}
+
+.carousel {
+  position: relative;
+  width: 100vw;
+  height: 550px;
   perspective: 500px;
   transform-style: preserve-3d;
   transform-origin: 0% 50%;
-
-  /* Carousel Slider */
-
-  &.carousel-slider {
-    top: 0;
-    left: 0;
-
-    .carousel-fixed-item {
-      &.with-indicators {
-        bottom: 68px;
-      }
-
-      position: absolute;
-      left: 0;
-      right: 0;
-      bottom: 20px;
-      z-index: 1;
-    }
-
-    .carousel-item {
-      width: 100%;
-      height: 100%;
-      position: absolute;
-      top: 0;
-      left: 0;
-
-      h2 {
-        font-size: 24px;
-        font-weight: 500;
-        line-height: 32px;
-      }
-
-      p {
-        font-size: 15px;
-      }
-    }
-  }
-
-  /* Carousel Items */
-
-  .carousel-item {
-    visibility: hidden;
-    position: absolute;
-    top: 0;
-    left: 0;
-
-    & > img {
-      width: 100%;
-    }
-  }
-
-  /* Indicators */
-
-  .indicators {
-    padding-left: 0;
-    color: red;
-    list-style-type: none;
-
-    position: absolute;
-    text-align: center;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    margin: 0;
-
-    .indicator-item {
-      &.active {
-        background-color: var(--yellow-color);
-      }
-
-      display: inline-block;
-      position: relative;
-      cursor: pointer;
-      height: 8px;
-      width: 8px;
-      margin: 24px 4px;
-      background-color: var(--text-color);
-
-      transition: background-color 0.3s;
-      border-radius: 50%;
-    }
-  }
-
-  /* Materialbox compatibility */
-
-  &.scrolling .carousel-item .materialboxed,
-  .carousel-item:not(.active) .materialboxed {
-    pointer-events: none;
-  }
 }
 
-.carousel-box {
-  position: relative;
-  min-width: 950px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  background: rgba(0, 0, 0, 0.2);
-  backdrop-filter: blur(20px);
-  border-radius: 10px;
+.carousel.carousel-slider {
+  top: 0;
+  left: 0;
 }
 
-.carousel {
-  position: relative;
-  display: flex;
-  height: 550px;
-  perspective: 1500;
+.carousel.carousel-slider .carousel-fixed-item {
+  position: absolute;
+  left: 0;
+  right: 0;
+  bottom: 20px;
+  z-index: 1;
+}
+
+.carousel.carousel-slider .carousel-fixed-item.with-indicators {
+  bottom: 68px;
+}
+
+.carousel.carousel-slider .carousel-item {
+  width: 100%;
+  height: 100%;
+  min-height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+.carousel.carousel-slider .carousel-item h2 {
+  font-size: 24px;
+  font-weight: 500;
+  line-height: 32px;
+}
+
+.carousel.carousel-slider .carousel-item p {
+  font-size: 15px;
 }
 
 .carousel .carousel-item {
+  visibility: hidden;
   width: 250px;
   cursor: pointer;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+.carousel .carousel-item > img {
+  width: 100%;
+}
+
+.carousel .indicators {
+  padding-left: 0;
+  list-style-type: none;
+  position: absolute;
+  text-align: center;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  margin: 0;
+}
+
+.carousel .indicators .indicator-item {
+  display: inline-block;
+  position: relative;
+  cursor: pointer;
+  height: 8px;
+  width: 8px;
+  margin: 24px 4px;
+  background-color: var(--text-color);
+  transition: background-color 0.3s;
+  border-radius: 50%;
+}
+
+.carousel .indicators .indicator-item.active {
+  background-color: var(--yellow-color);
+}
+
+.carousel.scrolling .carousel-item .materialboxed,
+.carousel .carousel-item:not(.active) .materialboxed {
+  pointer-events: none;
 }
 
 .carousel .carousel-item img {
   max-width: 235px;
+  max-height: 319px;
   border-radius: 10px;
   transform: translateX(8px) translateY(-100px);
   object-fit: cover;
@@ -385,17 +392,44 @@ textarea {
 .carousel__background {
   position: absolute;
   z-index: var(--z-background);
-  top: 85%;
+  bottom: 0%;
+}
+
+/* Actors */
+
+.actors__container {
+  padding-bottom: 100px;
 }
 
 .actors__content {
   display: flex;
-  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 10px 20px;
+  padding-top: 10px;
 }
 
 .actor__card {
-  width: 45%;
-  height: 100%;
+  position: relative;
+  text-align: center;
+}
+
+.actor__card img {
+  width: 39vw;
+}
+
+.actor__figcaption {
+  position: absolute;
+  width: 100%;
+  padding: 10px 0px;
+  bottom: 0;
+  font-family: var(--nav-text-font);
+  font-size: var(--step--1);
+  background-color: var(--brown-color);
+}
+
+.actors__background {
+    padding-top: 10px;
 }
 
 /* For small devices*/
