--- a/public/css/style.css
+++ b/public/css/style.css
@@ -73,7 +73,6 @@ html {
 }
 
 body {
-  background: url(../img/testfond.svg) repeat-y;
   background-color: var(--background-color);
 }
 
@@ -745,6 +744,11 @@ padding: 10px 0px;
 #synopsis {
   max-width: 954px;
   line-height: 1.2em;
+  overflow: hidden;
+}
+
+#synopsis p {
+  white-space: pre-wrap;
 }
 
 .read-btn {
@@ -797,6 +801,12 @@ padding: 10px 0px;
 
 /* For large devices*/
 @media screen and (min-width: 992px) {
+  body {
+    background: url(../img/testfond.svg) repeat-y;
+    background-size: 100%;
+    background-color: var(--background-color);
+  }
+
   .nav__list {
     display: flex;
     flex-direction: row;
